<resources>
    <string name="app_name">Shopper</string>
    <string name="clothes_main">Consultar Ropa</string>
    <string name="clothes_insert">Insertar/Editar Ropa</string>
    <string name="clothes_delete">Borrar Ropa</string>
    <string name="employees_main">Consultar Empleados</string>
    <string name="employees_delete">Borrar Empleado</string>
    <string name="employees_insert">Insertar/Editar Empleado</string>
    <string name="clients_main">Consultar Clientes</string>
    <string name="clients_insert">Insertar/Editar Cliente</string>
    <string name="clients_delete">Borrar Cliente</string>
    <string name="sales_main">Consultar Ventas</string>
    <string name="sales_delete">Borrar Venta</string>
    <string name="sales_insert">Insertar/Editar Venta</string>

    <string name="instructions_pick_customer">Elige el cliente para atender.</string>
    <string name="continue_button">Continuar</string>
    <string name="welcome">Bienvenido</string>
    <string name="pick_customer">Elije un cliente</string>
    <string name="cart">Carrito</string>
    <string name="login">Login</string>
    <string name="is_admin_prompt">Admin? (0/1)</string>
    <string name="login_failed">Falló el login</string>
    <string name="shop_with">Atender a</string>
    <string name="register_failed">Falló el registro</string>
    <string name="retry">Intentar de nuevo</string>
    <string name="added_to_cart">Agregado al carrito:</string>
    <string name="empty_cart">¡No hay nada en el carrito!</string>
    <string name="top_selling">Productos más vendidos</string>
    <string name="could_not_add_to_cart">No se pudo agregar al carrito. No existe un producto con ese ID o no hay suficiente stock.</string>
    <string name="agregarProductoPorEscaneado">Escanear código</string>
    <string name="checkout">Finalizar compra</string>
    <string name="dialog_message">¿Agregar el producto #</string>
    <string name="post_dialog_message">al carrito?</string>
    <string name="dialog_title">Resultados del escaneo</string>
    <string name="addToCart">Agregar al carrito</string>
    <string name="cancel">Cancelar</string>
    <string name="prompt">Escanea un código de producto</string>
    <string name="ok">OK</string>
    <string name="button">Botón</string>
    <string name="customers">Cliente</string>
    <string name="email">email</string>
    <string name="last_name">Apellido</string>
    <string name="name">Nombre</string>
    <string name="password">contraseña</string>
    <string name="register">Registro</string>
    <string name="see_logs">Ver reportes</string>
    <string name="sale_error">Hubo un error con el procesamiento de la venta. Por favor acude con el gerente.</string>
    <string name="sale_success">¡Venta exitosa! Entrega los productos al cliente.</string>
    <string name="ID_customer">Clave del cliente</string>
    <string name="delete_entry">Borrar registro</string>
    <string name="ID_product">Clave del artículo</string>
    <string name="ID_employee">Clave del empleado</string>
    <string name="ID_sale">Clave de la venta</string>
    <string name="ID_clothes">Clave del artículo</string>
    <string name="ID_customer_opt">Clave del cliente (opcional)</string>
    <string name="save">Guardar</string>
    <string name="ID_product_opt">Clave del producto (opcional)</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_price">Precio</string>
    <string name="image">Imagen</string>
    <string name="stock">Disponibilidad</string>
    <string name="ID_sale_opt">Clave de la venta (opcional)</string>
    <string name="quantity">Cantidad</string>
    <string name="insert">Insertar</string>
    <string name="inserting_data">Insertando datos...</string>
    <string name="insert_data">Insertar datos</string>
    <string name="delete">Borrar</string>
    <string name="retail_price">Precio de venta</string>
    <string name="response">Respuesta</string>
    <string name="deleting_entry">Eliminando registro...</string>
    <string name="delete_error">Error al eliminar datos</string>
    <string name="update_data">Actualizar datos</string>
    <string name="updating_data">Actualizando datos</string>
    <string name="update_error">Error al actualizar datos</string>
    <string name="insert_error">Error al insertar datos</string>
    <string name="loading_data">Cargando datos...</string>
    <string name="receiving_data">Recibiendo datos...</string>

    <string name="employees">Empleados</string>
    <string name="clothes">Ropa</string>
    <string name="clients">Clientes</string>
    <string name="sales">Ventas</string>
    <string name="view_graphs">Ver gráfica</string>
    <string name="confirmation">Confirmación de pedido</string>
    <string name="confirm_order">Confirmar pedido</string>
    <string name="select_product_to_delete">Selecciona el producto que deseas eliminar del carrito</string>

</resources>
