<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/clientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Carrito de"/>

    </LinearLayout>

<android.support.v7.widget.RecyclerView
    android:id="@+id/reciclador"
    android:layout_width="match_parent"
    android:layout_height="303dp"
    android:layout_margin="5dp" />

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/borrar"
        android:layout_width="118dp"
        android:layout_height="53dp"
        android:text="@string/delete"
        android:onClick="deleteFromCart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.08" />

    <Button
        android:id="@+id/agregarPorEscaneado"
        android:layout_width="122dp"
        android:layout_height="54dp"
        android:text="@string/agregarProductoPorEscaneado"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:onClick="leer"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/checkout"
        android:layout_width="128dp"
        android:layout_height="57dp"
        android:text="@string/checkout"
        android:onClick="checkout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteY="83dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="113dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="manualItemPicker"
        android:text="@string/manualAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />
</android.support.constraint.ConstraintLayout>


</LinearLayout>
